assets/css/style.scss
@font-face {
  font-family: 'Publico';
  src: url('./fonts/publico/Publico-Roman.otf');
}

@font-face {
  font-family: 'Publico-Black';
  src: url('./fonts/publico/Publico-Black.otf');
}

@font-face {
  font-family: 'Boomer';
  src: url('./fonts/boomer/Boomer-Regular.otf');
  font-weight: 400;
}
@font-face {
  font-family: 'Boomer';
  src: url('./fonts/boomer/Boomer-Bold.otf');
  font-weight: 700;
  font-style: normal
}
@font-face {
  font-family: 'Boomer-Light';
  src: url('./fonts/boomer/Boomer-Light.otf');
  font-style: normal
}

$large-text-bold: 'Boomer';
$large-text: 'Boomer-Light';
$body-text: 'Boomer';
$bg-color: #222;
$text-black: #121212;
$gray-bg: #e7e7e7;
/******************** 
Begin positioning
********************/
html, body {
  margin: 0px;
  height: 100%;
  position: relative;
}

body {
  background-color: $bg-color;
  color: $text-black;
}

#map-link {
  position: absolute;
  top: 0;
  right: 0;
  padding: 5px;
  font-family: 'Boomer';
  font-weight: 700;
  font-size: .6em;
  color: $text-black;
  text-decoration: underline;
  background: white;
}

#cover {
  background-color: white;
  opacity: .5;
  transition: opacity .25s;
}

#map {
  max-width: 100%;
  z-index: -1;
  border: 1px solid white;
}

#wrapper {
  position: relative;
  cursor: default;
}

.content {
  position: absolute;
  width: 100%;
  height: 100%;
  //left: 0;
  top: 0;
}

#progress-bar {
  position: absolute;
  bottom: 0;
  width: 0;
  height: 4px;
  left: 0;
  background-color: white;
  transition: all .25s ease;
}

.fade {
  opacity: .2;
}

.helper {
  position: absolute;
  width: 100%;
  padding: 40px;
  top: 50%;
  left: 50%;
  font-family: $large-text-bold;
  transform: translate(-50%, -50%);
  font-size: 2em;
  font-weight: 700;
  text-align: center;
  text-transform: uppercase;
  @media (max-width: 400px){
    padding: 10px;
    font-size: 1.5em;
  }
}

.finished-link {
  text-decoration: underline;
  color: $text-black;
}

#finished-link:hover {
  color: #49709F;
}

#descs {
  height: 9em;
}

.desc {
  display: none;
}

.box { 
  position: relative;
  left: 50%;
  transform: translateX(-50%);
  font-family: $body-text;
  font-size: 1.13em;
  text-align: left;
  box-sizing: border-box;
  color: white;
  line-height: 1.4;
  padding: 0 10px;
  @media (max-width: 400px){
    font-size: .8em;
  }
}

#buttons {
  height: 2.5em;
  padding: .3em 0;
  color: #A4A4A4;
  font-family: $body-text;
  font-weight: 700;
  font-size: .8em;
  /* Prevent double-click on back or next button from selecting the text. */
  -webkit-user-select: none; /* webkit (safari, chrome) browsers */
  -moz-user-select: none; /* mozilla browsers */
  -khtml-user-select: none; /* webkit (konqueror) browsers */
  -ms-user-select: none; /* IE10+ */
  div {
    cursor: pointer;
    text-decoration: underline;
  }
}

#back-button {
  float: left;
  @media (max-width:540px){
    padding-left: 10px;
  }
}

#next-button {
  float: right;
  @media (max-width:540px){
    padding-right: 10px;
  }
}

// Styles for pins
.point {
  position: absolute;
  transition: all .3s ease;
  width: 50px;
  margin-left: -15px;
  margin-top: -20px;
}

#firstPin {
  display: none;
}

/***************************
* Begin splash screen styles
***************************/
#splash {
  position: fixed;
  background-color: $bg-color;
  width: 100%;
  height: 100%;
  z-index: 999;
  color: #fff;
}

#splash-holder {
  padding: 20px;
  position: relative;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -60%);
  max-width: 600px;
}

#splash-title {
  font-family: $body-text;
  font-weight: 700;
  line-height: 1;
  font-size: 5em;
  @media (max-width: 400px){
    font-size: 3em;
  }
}

#splash-text {
  margin-top: 20px;
  font-family: $large-text;
  font-size: 1.4em;
  @media (max-width: 400px){
    font-size: 1em;
  }
}

#splash-logo {
  position: absolute;
  bottom: 10px;
  right: 10px;
}

#begin-button {
  font-family: $body-text;
  font-size: 5em;
  margin-top: 10px;
  width: 100%;
  border-top: 3px solid #fff;
  text-align: center;
  transition: background-color .5s;
  transition: color .5s;
  bottom: 0px;
  padding-bottom: 10px;
  cursor: pointer;
  @media (max-width: 400px) {
    font-size: 3em;
  }
}

#begin-button:hover {
  color: $text-black;
  background-color:white;
}
/***************************
* End splash screen styles
***************************/

/******************** 
Begin navbar
********************/
#nav {
  margin-bottom: 10px;
  position: relative;
  height: 50px;
}
#nav-logo {
  display: inline-block;
  img {
    padding: 3px;
    height: 50px;
  }
}

#nav-title {
  vertical-align: middle;
  display: inline-block;
  font-family: 'Boomer';
  line-height: 1em;
  font-weight: 700;
  font-size: 20px;
  color: #fff;
  text-transform: uppercase;
  @media (max-width: 540px) {
    display: none;
  }
}

.fb-share {
  position: absolute;
  vertical-align: center;
  right: 0px;
  margin: 10px;
}

#nav-left {
  position: absolute;
}
/******************** 
End navbar 
********************/

/******************** 
Begin Related Stories
********************/
#related-content {
  padding-top: 40px;
  padding-bottom: 40px;
  position: relative;
  width: 100%;
  background-color: #e7e7e7;
}

#stories-holder {
  background-color: $gray-bg;
  padding: 40px 20px;
  @media (max-width: 40em){
    padding: 40px 0;
  }
  h2 {
    text-align: center;
    color: $text-black;
    font-family: $body-text;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: .5px;
    font-size: 24px;
  }
}

.story-card {
  background-color: white;
  padding: 20px;
  color: $text-black;
  margin-bottom: 20px;
  @media (min-width: 640px) {
    height: 275px;
  }
  @media (min-width: 940px) {
    height: 175px;
  }
}

.story-card:hover, .story-card:focus {
  outline: 2px solid #b5cde3;
  background-color: #f9f9f9;
}

.story-title {
  color: $text-black;
  left: 10px;
  font-family: $body-text;
  font-size: 18px;
  text-transform: uppercase;
  letter-spacing: 1px;
  margin: 0;
  padding: 0;
  @media (max-width: 40em){
    margin-top: 10px;
  }
}

.dateline {
  margin: 0;
  padding: 0;
  line-height: 1.2em;
  font-family: $large-text;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-size: 14px;
  color: $text-black;
}
.story-tease {
  margin-top: 10px;
  margin-bottom: 0;
  font-family: $large-text;
  font-size: 14px;
}

.text {
  max-width: 220px;
  position: relative;
  float: left;
  margin-left: 10px;
}

/******************** 
End related stories
********************/

/******************** 
Begin credits
********************/
#credits {
  padding: 20px;
  color: white;
  font-family: $body-text;
  font-size: 12px;
  text-transform: uppercase;
  border-top: 2px solid white;
  @media (min-width: 80em){
    div {
      margin-left: 40px;
    }
  }
}
/******************** 
End credits
********************/

